updated grocery trip

--- a/index.html
+++ b/index.html
@@ -70,17 +70,20 @@
         <div class="thingyColumn">
             <div class="card">
                 <h3>Last grocery trip</h3>
-                <p style="text-align: left">+Olive oil (Extra virgin)<br>
-                    +spartan apples (again)<br>
-                    +Taki's (spicy)<br>
-                    +Croutons(good)<br>
-                    +unsweetened orange juice (again)<br>
-                    +Chicken thighs<br>
-                    +minced beef<br>
-                    +Cabbage<br>
-                    +Broccoli (price is higher wtf)<br>
-                    +Banana Chocolate Chip Muffin<br>
-                    -Indomie noodles
+                <p style="text-align: left">+watermelon juice..?<br>
+                    +spartan apples<br>
+                    +bananas<br>
+                    +garlic, onion, carrot, celery<br>
+                    +canned crushed tomatoes<br>
+                    +Chicken breasts<br>
+                    +dried basil and parsley<br>
+                    +eggplant, zucchini, roma tomatoes<br>
+                    +all purpose flour<br>
+                    +pie crusts<br>
+                    +milk<br>
+                    +chicken broth<br>
+                    +can of fish(i forgot what kind)<br>
+                    -i FOROGT to buy peas FUCKKKKK
                 </p>
             </div>
             <div class="card">
