Update music player

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <!-- Note: we made this in such a way to not use Node.js since this is a static website-->
                 <!-- This means that whenever we add a song, we have to change rand.js to include it in the arrays-->
                 <p id="np">Now playing: </p>
-                <audio id="player" controls="" style="max-width:100%">
+                <audio id="player" controls="" style="max-width:100%" loop="true">
                     <source src="/media/songs/xgirl.mp3" type="audio">
                 </audio>
             </div>
