Typo change, todo update

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                     <br>-Links of mine
                     <br>-New pages: image galleries(cats, rhythm game scoreposting, Blender, ff14 etc screenshots, and the weird memes that i make)
                     <br>-New pages: tier lists(arcaea, arknights, etc)
+                    <br>-Dark mode css
+                    <br>-Try to hook my website up with something, maybe a discord bot
                 </p>
             </div>
         </div>
@@ -75,7 +77,7 @@
                     +bananas<br>
                     +garlic, onion, carrot, celery<br>
                     +canned crushed tomatoes<br>
-                    +Chicken breasts<br>
+                    +chicken breasts<br>
                     +dried basil and parsley<br>
                     +eggplant, zucchini, roma tomatoes<br>
                     +all purpose flour<br>
@@ -83,7 +85,8 @@
                     +milk<br>
                     +chicken broth<br>
                     +can of fish(i forgot what kind)<br>
-                    -i FOROGT to buy peas FUCKKKKK
+                    -i FOROGT to buy peas FUCKKKKK<br>
+                    +update 11.27: I bought peas
                 </p>
             </div>
             <div class="card">
