--- a/index.html
+++ b/index.html
@@ -72,21 +72,17 @@
         <div class="thingyColumn">
             <div class="card">
                 <h3>Last grocery trip</h3>
-                <p style="text-align: left">+watermelon juice..?<br>
-                    +spartan apples<br>
-                    +bananas<br>
-                    +garlic, onion, carrot, celery<br>
-                    +canned crushed tomatoes<br>
-                    +chicken breasts<br>
-                    +dried basil and parsley<br>
-                    +eggplant, zucchini, roma tomatoes<br>
-                    +all purpose flour<br>
-                    +pie crusts<br>
-                    +milk<br>
-                    +chicken broth<br>
-                    +can of fish(i forgot what kind)<br>
-                    -i FOROGT to buy peas FUCKKKKK<br>
-                    +update 11.27: I bought peas
+                <p style="text-align: left">+canned mackerel<br>+canned tuna in olive oil<br>
+                    +unsweetened orange juice<br>
+                    +garbage bags. Because the ones I got from dollarama FUCKING SUCK<br>
+                    +croutons<br>
+                    +takis<br>
+                    +bagged 1% milk, salted butter<br>
+                    +baby potatoes<br>
+                    +bananas, apples, lettuce, onion<br>
+                    +bologna, ground beef, chicken drumsticks<br>
+                    +chocolate croissants<br>
+                    +whole wheat unsweetened bread<br>
                 </p>
             </div>
             <div class="card">
