--- a/html/links.html
+++ b/html/links.html
@@ -32,15 +32,32 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
-    <h1>My links</h1>
+    <h1>Links</h1>
 </header>
 
 <main>
+    <h2>
+        My links
+    </h2>
+    <p>
+        Find me in these places. I typically use bluesky, bilibili, and youtube in terms of social media.
+    </p>
 
+    <ul>
+        <li><a href="https://bsky.app/profile/bfrai.bsky.social" target="_blank">Bluesky</a> </li>
+        <li><a href="https://www.youtube.com/@FraicaRaifraica" target="_blank">Youtube</a> </li>
+        <li><a href="https://space.bilibili.com/79358708" target="_blank">Bilibili</a> </li>
+        <li><a href="https://steamcommunity.com/id/fuckkkkk12341234kk/" target="_blank">Steam</a></li>
+        <li><a href="https://github.com/FraiFish" target="_blank">GitHub</a></li>
+    </ul>
+    
+    <h2>
+        test
+    </h2>
 </main>
 
 <footer>
-
+    <p>Website deployed with <a href="https://github.com/FraiFish/FraiFish.github.io">GitHub Pages</a>. Website code is under <i>GPLv3</i>. Website content is under <i>CC BY-NC-SA 4.0</i>.</p>
 </footer>
 
 </body>
