added new class

--- a/html/links.html
+++ b/html/links.html
@@ -44,7 +44,7 @@
     </p>
 
     <ul>
-        <li><a href="https://bsky.app/profile/bfrai.bsky.social" target="_blank">Bluesky</a> test test test</li>
+        <li><a href="https://bsky.app/profile/bfrai.bsky.social" target="_blank">Bluesky</a> <div class="listtext">test test test </div></li>
         <li><a href="https://www.youtube.com/@FraicaRaifraica" target="_blank">Youtube</a> </li>
         <li><a href="https://space.bilibili.com/79358708" target="_blank">Bilibili</a> </li>
         <li><a href="https://steamcommunity.com/id/fuckkkkk12341234kk/" target="_blank">Steam</a></li>
