--- a/html/links.html
+++ b/html/links.html
@@ -71,7 +71,7 @@
         
         <li>
             <a href="https://discord.com/invite/amiyapog/" target="_blank">Amiyapog association on discord</a> 
-            <div class="listtext">Disclaimer: I am not a staff I just talk here</div>
+            <div class="listtext">Disclaimer: I am not a staff I just talk here <br> I am fraica_ on discord.</div>
         </li>
         
         <li></li>
