--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!-- Note: we made this in such a way to not use Node.js since this is a static website-->
                 <!-- This means that whenever we add a song, we have to change rand.js to include it in the arrays-->
                 <p id="np">Now playing: </p>
-                <audio id="player" controls="" style="max-width:100%" loop="true">
+                <audio id="player" controls="" style="max-width:100%" loop="loop">
                     <source src="/media/songs/xgirl.mp3" type="audio">
                 </audio>
             </div>
@@ -95,11 +95,9 @@
             Featured article
         </h2>
         <p>
-            McSpicy Wings is a snack item created and made available in 1998 in McDonalds in China, the second year after the release of the McSpicy(burger). The McSpicy Wings are "Developed for Chinese consumers", and the McSpicy burger shares similar slogans such as "Specially developed signature item for 'the Chinese stomach'".<br><br>
-        <br><br>
-            McSpicy Wings is made of both the drumette and the wingette, with "unique marinate sauce and spice" at 800-1000 Scoville Heat Units, made from powder of a Chinese pepper known as “Tian Ying Pepper"(I could not find an English article on this pepper) packed with 40000-50000 Scoville Heat Units, and fried in canola oil. The crust is made of a mix of flour and baking powder, and the texture is crisp and tender with every bite.<br><br>
-        here are some screenshots from the <a href="https://www.mcdonalds.com.cn" target="_blank ">McDonalds China website:</a> <br><br>
-        <img src="/media/cnf/mw.png" alt="from the mcdonalds website" style="width:250px; height:140px"><img src="/media/cnf/mw2.png" alt="from the mcdonalds website" style="width:250px; height:140px"><img src="/media/cnf/mw3.png" alt="from the mcdonalds website" style="width:250px; height:140px" ><img src="/media/cnf/mw4.png" alt="from the mcdonalds website" style="width:250px; height:140px">
+            《从百草园到三味书屋》Is a recollective prose written by the leading figure in modern Chinese literature, Lu Xun, dedicated to the flavorful childhood stage of life. The prose describes two locations with a great contrast in tone, the garden of a hundred herbs, and the Sanwei classroom. For the garden of a hundred herbs, Lu Xun uses "fun" as the central theme, describing a place of inexhaustible joy for children, with strange folklore and legends to decorate. Meanwhile, the Sanwei classroom reeks of an "outdated, rotting" scent, being described as "the sternest study in the whole city", where children are bound and constrained by rules. Its part in the prose is not dreadful, however, as Lu Xun takes the approach of writing about students having fun in its backyard during classroom breaks, and doing pranks on the spiritless professors, expressing the irrepressible inherence of happiness in children.
+            <br><br>
+            从百草园到三味书屋 is and has been included in the Literary class curriculum in multiple iterations, sometimes as the entire prose, sometimes as excerpts.</p>
     </div>
         
     </div>
