--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             <div class="card">
                 <h3>TODO</h3>
                 <p style="text-align: left">
-                    -Put geckronome somewhere
-                    <br>-Links of mine
+                    -links page done; name of Links page to be changed
                     <br>-New pages: image galleries(cats, rhythm game scoreposting, Blender, ff14 etc screenshots, and the weird memes that i make)
                     <br>-New pages: tier lists(arcaea, arknights, etc)
                     <br>-Dark mode css
