--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 </audio>
             </div>
             <div class="card">
+                <h3><a href="" target="_blank">Go</a></h3>
+            </div>
+            <div class="card">
                 <h3>TODO</h3>
                 <p style="text-align: left">
                     -links page done; name of Links page to be changed
