grocery trip updated

--- a/index.html
+++ b/index.html
@@ -68,17 +68,18 @@
         <div class="thingyColumn">
             <div class="card">
                 <h3>Last grocery trip</h3>
-                <p style="text-align: left">+canned mackerel<br>+canned tuna in olive oil<br>
+                <p style="text-align: left">+canned tuna in olive oil<br>
                     +unsweetened orange juice<br>
-                    +garbage bags. Because the ones I got from dollarama FUCKING SUCK<br>
-                    +croutons<br>
-                    +takis<br>
-                    +bagged 1% milk, salted butter<br>
                     +baby potatoes<br>
-                    +bananas, apples, lettuce, onion<br>
-                    +bologna, ground beef, chicken drumsticks<br>
-                    +chocolate croissants<br>
-                    +whole wheat unsweetened bread<br>
+                    +bananas, apples, strawberries<br>
+                    +pumpkin danish<br>
+                    +cream mushroom concentrate ×2<br>
+                    +macaroni<br>
+                    +collard greens<br>
+                    +indomie<br>
+                    +red chili beans<br>
+                    +旺旺仙贝(how do they have this?)<br>
+                    -I DIDN'T BUY YOGURT?? I'm so upset with myse;f
                 </p>
             </div>
             <div class="card">
