grocery trip update 2025.1.11

--- a/index.html
+++ b/index.html
@@ -68,18 +68,16 @@
         <div class="thingyColumn">
             <div class="card">
                 <h3>Last grocery trip</h3>
-                <p style="text-align: left">+canned tuna in olive oil<br>
-                    +unsweetened orange juice<br>
-                    +baby potatoes<br>
-                    +bananas, apples, strawberries<br>
-                    +pumpkin danish<br>
-                    +cream mushroom concentrate ×2<br>
-                    +macaroni<br>
-                    +collard greens<br>
-                    +indomie<br>
-                    +red chili beans<br>
-                    +旺旺仙贝(how do they have this?)<br>
-                    -I DIDN'T BUY YOGURT?? I'm so upset with myse;f
+                <p style="text-align: left">-chicken breast<br>
+                    -butter(i forgot i already had butter so i have 2 now)<br>
+                    -milk, bag of milk, bag of milk<br>
+                    -mushrooms, yellow onion<br>
+                    -curry<br>
+                    -croutons<br>
+                    -unsweetened orange juice<br>
+                    -canned mackerel and tuna<br>
+                    -thousand island dressing<br>
+                    -marshmallows, as a treattt
                 </p>
             </div>
             <div class="card">
