--- a/index.html
+++ b/index.html
@@ -68,16 +68,21 @@
         <div class="thingyColumn">
             <div class="card">
                 <h3>Last grocery trip</h3>
-                <p style="text-align: left">-chicken breast<br>
-                    -butter(i forgot i already had butter so i have 2 now)<br>
-                    -milk, bag of milk, bag of milk<br>
-                    -mushrooms, yellow onion<br>
-                    -curry<br>
+                <p style="text-align: left">-dryer sheets <br>
+                    -yogurt<br>
+                    -marble loaf cake<br>
+                    -matches<br>
+                    -cookies<br>
+                    -chicken hot dog<br>
+                    -canned tuna<br>
+                    -ground red cayenne<br>
+                    -banana apple orange<br>
+                    -cheese slices<br>
+                    -lettuce collard greens<br>
+                    -bread<br>
+                    -instant noodles<br>
                     -croutons<br>
-                    -unsweetened orange juice<br>
-                    -canned mackerel and tuna<br>
-                    -thousand island dressing<br>
-                    -marshmallows, as a treattt
+                    -orange juice
                 </p>
             </div>
             <div class="card">
