--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
         <div class="thingyColumn">
             <div class="card">
                 <h3>Last grocery trip</h3>
-                <p style="text-align: left">-dryer sheets <br>
+                <p style="text-align: left">-rigatoni<br>
                     -yogurt<br>
-                    -marble loaf cake<br>
-                    -matches<br>
+                    -strawberry jam<br>
+                    -discounted chips<br>
                     -cookies<br>
-                    -chicken hot dog<br>
+                    -ham<br>
                     -canned tuna<br>
-                    -ground red cayenne<br>
-                    -banana apple orange<br>
-                    -cheese slices<br>
-                    -lettuce collard greens<br>
+                    -naba cabbage<br>
+                    -banana apple<br>
+                    -apple juice.. not unsweetened.. im gonna die<br>
+                    -canned cream of mushroom<br>
                     -bread<br>
-                    -instant noodles<br>
-                    -croutons<br>
-                    -orange juice
+                    -chicken thighs<br>
+                    -onions<br>
+                    -baby potatoes
                 </p>
             </div>
             <div class="card">
