--- a/index.html
+++ b/index.html
@@ -68,21 +68,19 @@
         <div class="thingyColumn">
             <div class="card">
                 <h3>Last grocery trip</h3>
-                <p style="text-align: left">-rigatoni<br>
-                    -yogurt<br>
-                    -strawberry jam<br>
-                    -discounted chips<br>
-                    -cookies<br>
-                    -ham<br>
-                    -canned tuna<br>
-                    -naba cabbage<br>
-                    -banana apple<br>
-                    -apple juice.. not unsweetened.. im gonna die<br>
-                    -canned cream of mushroom<br>
-                    -bread<br>
-                    -chicken thighs<br>
-                    -onions<br>
-                    -baby potatoes
+                <p style="text-align: left">$4 chocolate bar<br>
+                    $6.5 rice<br>
+                    $7 offbrand nutella<br>
+                    $9 cookie spread, too costly..<br>
+                    $5.5 orange juice (i still haven't found apple juice)<br>
+                    $7 bacon<br>
+                    $11 canned tuna<br>
+                    $5.5 cinnamon rolls(should be buying in bulk for $4.3 each..)<br>
+                    $5 yogurt<br>
+                    $2.5 broccoli<br>
+                    $8 banana, plum nectarine<br>
+                    $8 jump for the beef<br>
+                    $4 bread
                 </p>
             </div>
             <div class="card">
