--- a/index.html
+++ b/index.html
@@ -68,18 +68,22 @@
         <div class="thingyColumn">
             <div class="card">
                 <h3>Last grocery trip</h3>
-                <p style="text-align: left">$4 chocolate bar<br>
-                    $6.5 rice<br>
-                    $7 offbrand nutella<br>
-                    $9 cookie spread, too costly..<br>
-                    $5.5 orange juice (i still haven't found apple juice)<br>
-                    $7 bacon<br>
-                    $11 canned tuna<br>
-                    $5.5 cinnamon rolls(should be buying in bulk for $4.3 each..)<br>
-                    $5 yogurt<br>
-                    $2.5 broccoli<br>
-                    $8 banana, plum nectarine<br>
-                    $8 jump for the beef<br>
+                <p style="text-align: left">lindor choccy<br>
+                    sodium free low sugar oat milk<br>
+                    bananas(waiting for them to turn yellow then being frozen)<br>
+                    apples<br>
+                    blackberries, they had a sale -w-<br>
+                    baking soda<br>
+                    honey oats bread<br>
+                    85% chocolate<br>
+                    baking trays.. as of writing this they are still in my backpack<br>
+                    unsweetened orange juice<br>
+                    ice cream sandwich<br>
+                    peanut butter w/o crunch<br>
+                    grape jam<br>
+                    food wrap<br>
+                    (chickened out on buying salad ingredients…)
+
                 </p>
             </div>
             <div class="card">
